test/fail/obj-empty-with.mo
import Prim "mo:⛔";

// syntax
let b = { b = 6 };
let wrong = { b with }; // syntax error

